syntax = "proto3";

package proto;

import "statement.proto";

message Request {
    // request id
    int64 requestId = 1;
    // rpc interface
    string iface = 2;
    // rpc method
    string method = 3;
    // rpc method args
    map<string, bytes> args = 4;
}

message Response {
    int64 requestId = 1;
    int32 errorCode = 2;
    string errorMsg = 3;
    bytes result = 4;
}

message LevelTaskResultRequest {
    string globalId = 1;
    string parentIdentify = 2;
    string childIdentify = 3;
    bool finish = 4;
    int32 errorCode = 5;
    string errorMsg = 6;
    bytes result = 7;
}

message LevelTaskRequest {
    string globalId = 1;
    bytes levelNode = 2;
    bytes message = 3;
}

message QueryTask {
    string database = 1;
    string sql = 2;
    Stmt statement = 3;
}

message QueryTaskResult {
    ResultSet result = 1;
}

message StatementRequest {
    Stmt statement = 1;
    string database = 2;
    string sql = 3;
    string queryId = 4;
    repeated bytes partialBrokers = 5;
    bytes rootBroker = 6;
    repeated string storage = 7;
}

message StatementResponse {
    ResultSet resultSet = 1;
}

message ReplicaResult {
    int64 ackIndex = 1;
    int64 responseTime = 2;
}
